--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - uses: actions/checkout@v1
       - name: Hello world action step
         id: hello
-        uses: /testingRepo/action@main
+        uses: zuhaibasgher/testingRepo/action@v1
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
