loading error fixing

--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,16 @@
-name: 'Hello world'
-description: 'greet someone and record time'
-input:
-	who-to-greet: #id of input
-		description: 'who to greet'
-		required: true
-		default: 'World'
-	output:
-		time: #id of output
-			description: 'the time we greeted you'
-	run:
-		using: 'docker'
-		image: 'Dockerfile'
-		args:
-			-${{ inputs.who-to-greet }}
+# action.yml
+name: 'Hello World'
+description: 'Greet someone and record the time'
+inputs:
+  who-to-greet:  # id of input
+    description: 'Who to greet'
+    required: true
+    default: 'World'
+outputs:
+  time: # id of output
+    description: 'The time we greeted you'
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.who-to-greet }}
