--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         id: hello
         uses: zuhaibasgher/testingRepo@main
         with:
-          who-to-greet: 'Mona the Octocat'
+          zuhiab: 'Mona the Octocat'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
