--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -6,10 +6,4 @@ jobs:
     name: A job to say hello
     steps:
       - name: Hello world action step
-        id: hello
-        uses: zuhaibasgher/testingRepo@main
-        with:
-          who to greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+        run: mkdir tempDir
