--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -1,13 +1,12 @@
-name: GitHub multiple docker images building Dem
+name: GitHub multiple docker images building Demo
 on: [push]
 jobs:
-	run-on: ubuntu-latest
-steps:
-	uses: zuhaibasgher/testingRepo@main
-	-name: first docker image
-		run: docker build -f /zuhaibasgher/testingRepo/docker/first/Dockerfile
-	-name: second docker image
-		run: docker build -f /zuhaibasgher/testingRepo/docker/second/Dockerfile
-		run: echo "second docker is running"
-			
-			
+  Explore-double-docker-images-Actions:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out repository code
+      uses: zuhaibasgher/testingRepo@v3
+    - name: build first docker image
+      run: docker build -f /zuhaibasgher/testingRepo/docker/first/Dockerfile
+    - name: buidl second docker image
+      run: docker build -f /zuhaibasgher/testingRepo/docker/second/Dockerfile
