changes in dockerfiles for testing
Signed-off-by: z.asghar <z.asghar@inx-systems.com>

--- a/docker/first/Dockerfile
+++ b/docker/first/Dockerfile
@@ -1,3 +1,7 @@
-FROM alpine:3.10
-COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+#This is a sample Image 
+FROM ubuntu 
+MAINTAINER demousr@gmail.com 
+
+RUN apt-get update 
+RUN apt-get install –y nginx 
+CMD [“echo”,”Image created”] 
