--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -7,6 +7,6 @@ jobs:
     - name: Check out repository code
       uses: zuhaibasgher/testingRepo@main
     - name: build first docker image
-      run: docker build -f zuhaibasgher/testingRepo/docker/first/ -t first_image
+      run: docker build zuhaibasgher/testingRepo/docker/first/
     - name: buidl second docker image
-      run: docker build -f zuhaibasgher/testingRepo/docker/second/ -t second_image
+      run: docker build zuhaibasgher/testingRepo/docker/second/
