--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -7,10 +7,8 @@ jobs:
     - name: Check out repository code
       uses: zuhaibasgher/testingRepo@main
     - name: build first docker image
-      run: |
-        cd docker/first/ 
-        docker build ./docker/first/ -t first_image
+      run:
+        docker build -t first_image -f ./docker/first/
     - name: build second docker image
-      run: |
-        cd docker/second/
-        docker build ./docker/second/ -t second_image
+      run:
+        docker build -t second_image -f ./docker/second/
