--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -8,7 +8,7 @@ jobs:
       uses: zuhaibasgher/testingRepo@main
     - name: build first docker image
       run:
-        docker build -t first_image -f ./docker/first/
+        docker build -t first_image ./docker/first/
     - name: build second docker image
       run:
-        docker build -t second_image -f ./docker/second/
+        docker build -t second_image ./docker/second/
