--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -7,8 +7,6 @@ jobs:
     - name: Check out repository code
       uses: zuhaibasgher/testingRepo@main
     - name: build first docker image
-      run:
-        docker build zuhaibasgher/testingRepo/docker/first/
+      run: docker build zuhaibasgher/testingRepo/docker/first/
     - name: build second docker image
-      run:
-        docker build zuhaibasgher/testingRepo/docker/second/
+      run: docker build zuhaibasgher/testingRepo/docker/second/
