--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -7,6 +7,6 @@ jobs:
     - name: Check out repository code
       uses: zuhaibasgher/testingRepo@main
     - name: build first docker image
-      run: docker build zuhaibasgher/testingRepo/docker/first/ --file Dockerfile
+      run: cd docker/first | docker build . --file Dockerfile
     - name: build second docker image
-      run: docker build zuhaibasgher/testingRepo/docker/second/ --file Dockerfile
+      run: cd docker/first | docker build . --file Dockerfile
