--- a/.github/workflows/build-multiple-docker-images.yml
+++ b/.github/workflows/build-multiple-docker-images.yml
@@ -7,6 +7,6 @@ jobs:
     - name: Check out repository code
       uses: zuhaibasgher/testingRepo@main
     - name: build first docker image
-      run:  docker build . --file Dockerfile
+      run:  docker build ./docker/first --file Dockerfile
     - name: build second docker image
-      run:  docker build . --file Dockerfile
+      run:  docker build ./docker/second --file Dockerfile
