changes in dockerfile
Signed-off-by: z.asghar <z.asghar@inx-systems.com>

--- a/docker/second/Dockerfile
+++ b/docker/second/Dockerfile
@@ -1,6 +1,5 @@
 #This is a sample Image 
 FROM ubuntu 
 MAINTAINER demousr@gmail.com 
-
 RUN apt-get update 
-RUN apt-get install –y nginx 
+RUN apt-get upgrade
