first/Dockerfile updated
Signed-off-by: z.asghar <z.asghar@inx-systems.com>

--- a/docker/first/Dockerfile
+++ b/docker/first/Dockerfile
@@ -1,5 +1,23 @@
 #This is a sample Image 
 FROM debian 
 MAINTAINER demousr@gmail.com 
-RUN apt-get update 
+RUN set -ex && \
+    apt-get update && \
+    apt-get -y --no-install-recommends upgrade && \
+    apt-get -y --no-install-recommends install \
+    cmake \
+    python3 \
+    ninja-build \
+    perl \
+    ca-certificates \
+    wget && \
+    cd /tmp && \
+    wget https://dl.google.com/go/go1.13.12.linux-amd64.tar.gz && \
+    tar -xvf go1.13.12.linux-amd64.tar.gz && \
+    mv go /usr/local && \
+    apt-get autoremove --purge -y && \
+    apt-get clean && \
+    apt-get autoclean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/*
 RUN echo "updated"
