--- a/docker/first/Dockerfile
+++ b/docker/first/Dockerfile
@@ -2,22 +2,5 @@
 FROM debian 
 MAINTAINER demousr@gmail.com 
 RUN set -ex && \
-    apt-get update && \
-    apt-get -y --no-install-recommends upgrade && \
-    apt-get -y --no-install-recommends install \
-    cmake \
-    python3 \
-    ninja-build \
-    perl \
-    ca-certificates \
-    wget && \
-    cd /tmp && \
-    wget https://dl.google.com/go/go1.13.12.linux-amd64.tar.gz && \
-    tar -xvf go1.13.12.linux-amd64.tar.gz && \
-    mv go /usr/local && \
-    apt-get autoremove --purge -y && \
-    apt-get clean && \
-    apt-get autoclean && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /tmp/*
+    apt-get install libgtk-4-1 libgtk-4-dev
 RUN echo "updated"
