first/dockerfile updated
Signed-off-by: z.asghar <z.asghar@inx-systems.com>

--- a/docker/first/Dockerfile
+++ b/docker/first/Dockerfile
@@ -1,6 +1,5 @@
 #This is a sample Image 
 FROM debian 
 MAINTAINER demousr@gmail.com 
-RUN set -ex && \
-    apt-get install libgtk-4-1 libgtk-4-dev
+RUN apt-get install libgtk-4-1 libgtk-4-dev
 RUN echo "updated"
