--- a/docker/first/Dockerfile
+++ b/docker/first/Dockerfile
@@ -1,5 +1,5 @@
 #This is a sample Image 
 FROM debian 
 MAINTAINER demousr@gmail.com 
-RUN apt-get update && \ apt-get install libgtk-4-dev
+RUN apt-get update && apt-get install libgtk-4-dev
 RUN echo "updated"
