--- a/docker/first/Dockerfile
+++ b/docker/first/Dockerfile
@@ -4,3 +4,5 @@ MAINTAINER demousr@gmail.com
 RUN apt-get update && apt-get install -y libgtk-3-dev && \
 apt-get install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa gstreamer1.0-gl gstreamer1.0-gtk3 gstreamer1.0-qt5 gstreamer1.0-pulseaudio
 RUN echo "updated"
+ENV CC=gcc-7
+ENV CXX=g++-7
