--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -1,17 +1,17 @@
 name: GitHub multiple jobs running
 on: [push]
-job:
-  First build docker image:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
-    - name: build first docker image
-      run:  docker build ./docker/first/ --tag first_image
-job:
-  test:
-    runs-on: first_image
-    steps:
-    - name: testing second job
-      run: echo "Just a test for 2nd job"
-    
+jobs:
+  First:
+   name: First
+   runs-on: ubuntu-latest
+   steps:
+     - name: Check out repository code
+       uses: actions/checkout@v2
+     - name: build first docker image
+       run:  docker build ./docker/first/ --tag first_image
+  Second:
+   name: Second
+   runs-on: first_image
+   steps:
+        - name: testing second job
+          run: echo "Just a test for 2nd job"
