--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -9,6 +9,8 @@ jobs:
        uses: actions/checkout@v2
      - name: build first docker image
        run:  docker build ./docker/first/ --tag first_image
+     - name: List images
+       run: docker images  
   Second:
    name: Second
    runs-on: ubuntu-latest
