limitation on job2

--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -12,6 +12,7 @@ jobs:
      - name: List images
        run: docker images  
   Second:
+   needs: First
    name: Second
    runs-on: ubuntu-latest
    steps:
